chore: production readiness phase 1 complete
- Pin pubky-core dep to commit 290d801
- Fix all compiler warnings (0 warnings in cargo check)
- Add FFI_PATTERNS.md documentation
- Add PAYKIT_INTEGRATION.md documentation
- Update README with documentation links
- Update DEPENDENCIES.md with version matrix
- Fix test helpers for pubky keypair generation
- Remove dead code (AsyncFromStr, handle_node_id)
- Add allow attributes for Trezor API compatibility

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ bip39 = "2.0"
 paykit-lib = { path = "../paykit-rs-master/paykit-lib", features = ["pubky"] }
 paykit-interactive = { path = "../paykit-rs-master/paykit-interactive" }
 pubky-noise = { path = "../pubky-noise-main", features = ["pubky-sdk"] }
-pubky = { git = "https://github.com/BitcoinErrorLog/pubky-core" }
+pubky = { git = "https://github.com/BitcoinErrorLog/pubky-core", rev = "290d801" }
 
 [dev-dependencies]
 tokio = { version = "1.40.0", features = ["full"] }
