chore: distribute XCFramework via GitHub Releases
- Update Package.swift to use release URL + checksum
- Remove binary files from git tracking
- Add .gitignore entries for local binaries
- Release v0.3.1 uploaded to GitHub Releases

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 target/
 .idea/
 .DS_Store
+
+# XCFramework binaries (distributed via GitHub Releases)
+bindings/ios/BitkitCore.xcframework/*.a
+bindings/ios/BitkitCore.xcframework/**/*.a
+bindings/ios/BitkitCore.xcframework.zip
